unpackaged/main/default/objects/Incentives__c/Incentives__c.object-meta.xml
<CustomObject>
    <description>A custom object that tracks incentive information related to the show occurrence and those sale reps associated to the occurrence.</description>
    <label>Incentives</label>
    <nameField>
        <displayFormat>IN-{0000000}</displayFormat>
        <label>Incentive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>