unpackaged/main/default/objects/Incentives__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>