unpackaged/main/default/objects/Incentives__c/fields/Owner_LastName__c.field-meta.xml
<CustomField>
    <fullName>Owner_LastName__c</fullName>
    <label>Owner LastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>