unpackaged/main/default/objects/Incentives__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>