unpackaged/main/default/objects/Incentives__c/fields/Show_Occurrence_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Occurrence Details</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>