unpackaged/main/default/objects/Incentives__c/validationRules/Incentive_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Incentive_Maximum</fullName>
    <active>true</active>
    <description>Ensure that an individual incentive record does not exceed 100%.</description>
    <errorConditionFormula>Incentive__c  &gt; 1.00</errorConditionFormula>
    <errorDisplayField>Incentive__c</errorDisplayField>
    <errorMessage>An individual incentive cannot exceed 100%.</errorMessage>
</ValidationRule>