unpackaged/main/default/objects/Incentives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Show_Occurrence__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>