unpackaged/main/default/objects/Incentives__c/listViews/All_Incentives.listView-meta.xml
<ListView>
    <fullName>All_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Show_Occurrence__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Incentives</label>
</ListView>