unpackaged/main/default/objects/Incentives__c/listViews/My_Incentives.listView-meta.xml
<ListView>
    <fullName>My_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Incentive__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Incentives</label>
</ListView>